--- a/src/app/movie/movie-detail/movie-detail.component.html
+++ b/src/app/movie/movie-detail/movie-detail.component.html
@@ -22,7 +22,10 @@
           <img src="https://image.tmdb.org/t/p/w50_and_h50_bestv2{{ company.logo_path }}" class="img-thumbnail"
             alt="">&nbsp;
         </div>
+       
       </div>
+      <button type="button" class="btn btn-primary" (click) = "edit(movie)">Editar Filme</button>&nbsp;
+      <button type="button" class="btn btn-warning" onclick = "history.go(-1)">Voltar</button> 
     </div>
   </div>
 </div>
